# django-mixpanel

./: .gitpod.Dockerfile  .gitpod.yml  pyproject.toml  setup.py
django_mixpanel/: __init__.py  middleware.py  query.py  track.py
django_mixpanel/tests/: conftest.py  test_views.py
django_mixpanel/tests/testapp/: mixpanel.py  urls.py
