[tool.poetry]
name = "django-mixpanel"
version = "0.1.0"
description = ""
authors = ["Kamal Mustafa <kamal@lalokalabs.co>"]
license = "MIT"
readme = "README.md"
packages = [{include = "django_mixpanel"}]

[tool.poetry.dependencies]
python = "^3.8"
Django = "^4.1.3"
pytest-djangoapp = "^1.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
